# googletest-cmake-example

./: .gitignore  README.md
source_code/: CMakeLists.txt  main.c  number.c  number.h  str.c  str.h
tests/: CMakeLists.txt  main.cpp  number_tests.cpp  str_tests.cpp
